src/public/css/style.css
/*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
@layer properties;
@layer theme, base, components, utilities;
@layer theme {
  :root, :host {
    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
      "Courier New", monospace;
    --color-red-600: oklch(57.7% 0.245 27.325);
    --color-red-700: oklch(50.5% 0.213 27.518);
    --color-blue-500: oklch(62.3% 0.214 259.815);
    --color-blue-600: oklch(54.6% 0.245 262.881);
    --color-blue-700: oklch(48.8% 0.243 264.376);
    --color-gray-400: oklch(70.7% 0.022 261.325);
    --color-gray-500: oklch(55.1% 0.027 264.364);
    --color-gray-600: oklch(44.6% 0.03 256.802);
    --color-white: #fff;
    --spacing: 0.25rem;
    --breakpoint-xl: 80rem;
    --container-xs: 20rem;
    --container-md: 28rem;
    --container-lg: 32rem;
    --container-3xl: 48rem;
    --container-7xl: 80rem;
    --text-xs: 0.75rem;
    --text-xs--line-height: calc(1 / 0.75);
    --text-sm: 0.875rem;
    --text-sm--line-height: calc(1.25 / 0.875);
    --text-base: 1rem;
    --text-base--line-height: calc(1.5 / 1);
    --text-lg: 1.125rem;
    --text-lg--line-height: calc(1.75 / 1.125);
    --text-xl: 1.25rem;
    --text-xl--line-height: calc(1.75 / 1.25);
    --text-2xl: 1.5rem;
    --text-2xl--line-height: calc(2 / 1.5);
    --font-weight-medium: 500;
    --font-weight-semibold: 600;
    --font-weight-bold: 700;
    --tracking-wider: 0.05em;
    --radius-sm: 0.25rem;
    --radius-md: 0.375rem;
    --radius-lg: 0.5rem;
    --radius-xl: 0.75rem;
    --ease-in: cubic-bezier(0.4, 0, 1, 1);
    --ease-out: cubic-bezier(0, 0, 0.2, 1);
    --animate-spin: spin 1s linear infinite;
    --blur-sm: 8px;
    --default-transition-duration: 150ms;
    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    --default-font-family: var(--font-sans);
    --default-mono-font-family: var(--font-mono);
    --color-body: var(--bg-body);
    --color-surface: var(--bg-surface);
    --color-wrapper: var(--bg-wrapper);
    --color-thead: var(--bg-thead);
    --color-input: var(--bg-input);
    --color-checkbox: var(--bg-checkbox);
    --color-toast: var(--bg-toast);
    --color-text-toast: var(--text-toast);
    --color-text-toast-success: var(--text-toast-success);
    --color-text-toast-error: var(--text-toast-error);
    --color-dropdown: var(--bg-dropdown);
    --color-navbar: var(--bg-navbar);
    --color-navbar-menu: var(--bg-navbar-menu);
    --color-navbar-menu-selected: var(--bg-navbar-menu-selected);
    --color-navbar-menu-hover: var(--bg-navbar-menu-hover);
    --color-toggle-theme: var(--bg-toggle-theme);
    --color-bg-hover: var(--bg-hover);
    --color-bg-selected: var(--bg-selected);
    --color-reload-btn: var(--bg-reload-btn);
    --color-dialog: var(--bg-dialog);
    --color-dialog-thead: var(--bg-dialog-thead);
    --color-dialog-td: var(--bg-dialog-td);
    --color-scrollbar-track: var(--scrollbar-track);
    --color-scrollbar-thumb: var(--scrollbar-thumb);
    --color-scrollbar-thumb-hover: var(--scrollbar-thumb-hover);
    --color-text-title: var(--text-title);
    --color-text-primary: var(--text-primary);
    --color-text-secondary: var(--text-secondary);
    --color-text-muted: var(--text-muted);
    --color-border: var(--border);
    --color-border-input: var(--border-input);
    --color-border-checkbox-hover: var(--border-checkbox-hover);
    --color-success-cell: var(--success-cell);
    --color-error-cell: var(--error-cell);
    --color-bg-success: var(--bg-success);
    --color-text-success: var(--text-success);
    --color-bg-error: var(--bg-error);
    --color-text-error: var(--text-error);
    --color-bg-warning: var(--bg-warning);
    --color-text-warning: var(--text-warning);
    --color-bg-info: var(--bg-info);
    --color-text-info: var(--text-info);
    --color-bg-unknowed: var(--bg-unknowed);
    --color-text-unknowed: var(--text-unknowed);
    --color-bg-getData: var(--bg-getData);
    --color-bg-changeNote: var(--bg-changeNote);
    --color-bg-reinstall: var(--bg-reinstall);
    --color-bg-changeIp: var(--bg-changeIp);
    --color-bg-copyIp: var(--bg-copyIp);
    --color-bg-reboot: var(--bg-reboot);
    --color-bg-pause: var(--bg-pause);
    --color-bg-getAPIKey: var(--bg-getAPIKey);
  }
}
/* ... */

